--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/react-fontawesome": "latest",
     "@tauri-apps/api": "^1.5.1",
     "babel-plugin-macros": "^3.1.0",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
